--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ djangorestframework
 djangorestframework-simplejwt
 gunicorn
 django-cors-headers>=3.13.0
+python-dotenv
+dj-database-url
+psycopg2-binary
+whitenoise
